# thricegrip

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  invariant-policy.md  pyproject.toml
.github/workflows/: ci-performance-watchdog.yml  meta-instruction-lens.yml
scripts/: ci-gate.sh  ci-task-watchdog.sh  gh-org-ci-lens.sh  install.sh  verify-meta-invariants.sh
src/thricegrip/: __init__.py  accessibility.py  agent.py  capture.py  gadget.py  hid.py  server.py  voice.py
static/: index.html
systemd/: thricegrip-api.service  thricegrip-gadget.service  thricegrip-stream.service
tests/: test_accessibility.py  test_agent.py  test_gadget.py  test_hid.py  test_voice.py
