[project]
name = "thricegrip"
version = "0.2.0"
description = "Three grips. One device. Total control. Pi-based KVM for AI agent computer-use."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Eric Mumford", email = "eric@heymumford.com" },
]
keywords = ["kvm", "raspberry-pi", "hid", "usb-gadget", "ai-agent", "computer-use", "accessibility", "assistive-technology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
]

dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
]

[project.optional-dependencies]
agent = [
    "anthropic>=0.39",
    "pillow>=10.0",
]
accessibility = [
    "anthropic>=0.39",
    "vosk>=0.3.45",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
